--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -42,3 +42,6 @@ body {
 .quebrar-linha {
   white-space: pre-line;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
